--- a/molDistill/notebooks/downs_results-bsl.ipynb
+++ b/molDistill/notebooks/downs_results-bsl.ipynb
@@ -8,14 +8,16 @@
     "%cd ../.."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -27,9 +29,6 @@
     "import seaborn as sns\n",
     "\n",
     "from molDistill.utils.notebooks import *\n",
-    "\n",
-    "STUDENT_MODEL = \"model_275.pth\"\n",
-    "L2_model = \"model_40\"\n",
     "\n",
     "MODELS_TO_EVAL = [STUDENT_MODEL, L2_model]\n"
    ]
@@ -72,6 +71,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "DATASETS = df_metadata[df_metadata.task_type == \"reg\"].index.tolist()\n",
     "\n",
     "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
@@ -84,6 +94,101 @@
     "style,latex = style_df_ci(df, order)\n",
     "\n",
     "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_compar_reg.tex\"\n",
+    "with open(table_path, \"w\") as f:\n",
+    "    f.write(latex)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "DATASETS = df_metadata.index.tolist()\n",
+    "\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
+    "    (STUDENT_MODEL,\"student\"),\n",
+    "    (L2_model, \"L2\"),\n",
+    "],)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_base = df_base.join(df_metadata, on=\"dataset\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df = df_base.groupby([\"embedder\",\"task_type\"]).metric_test.mean().reset_index().pivot(\"embedder\",\"task_type\",\"metric_test\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df.index.name = None\n",
+    "df.columns.name = None\n",
+    "\n",
+    "# REname cols\n",
+    "df.columns = [\"Classification\", \"Regression\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "style = df.style"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "style"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "col_format = \"l|c|c\"\n",
+    "\n",
+    "latex = style.to_latex(\n",
+    "        column_format=col_format,\n",
+    "        siunitx=True,\n",
+    "    )\n",
+    "\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_bsl_small.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
