--- a/molDistill/notebooks/downs_results-reg.ipynb
+++ b/molDistill/notebooks/downs_results-reg.ipynb
@@ -28,8 +28,6 @@
     "\n",
     "from molDistill.utils.notebooks import *\n",
     "\n",
-    "STUDENT_MODEL = \"model_190\"\n",
-    "\n",
     "MODELS_TO_EVAL = [\n",
     "    \"ChemBertMLM-10M\",\n",
     "    \"ChemBertMTR-77M\",\n",
@@ -62,7 +60,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[(STUDENT_MODEL,\"student\")],)\n",
+    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS, renames=[\n",
+    "    (STUDENT_MODEL,\"student-large\"),\n",
+    "    (ZINC_MODEL, \"student-small\"),\n",
+    "    ],\n",
+    ")\n",
     "\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
     "df"
@@ -101,9 +103,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
+    "    (STUDENT_MODEL,\"student-large\"),\n",
+    "    ],\n",
+    ")\n",
     "\n",
-    "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[(STUDENT_MODEL,\"student\")],)\n",
+    "df, order = aggregate_results_with_ci(df_base)\n",
     "df_base.reset_index(inplace=True, drop=True)\n",
     "\n",
     "step = df_base.embedder.value_counts().max()\n",
@@ -135,45 +140,22 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(5, 5))\n",
-    "sns.heatmap(ranked_df.set_index(\"embedder\").loc[order[::-1]].transpose(), cmap=\"viridis_r\", annot=True, fmt=\".1f\", cbar=False)\n",
+    "df_plot = ranked_df.set_index(\"embedder\").loc[order[::-1]].transpose()\n",
+    "df_plot.loc[\"Average\"] = df_plot.mean()\n",
+    "\n",
+    "fig = plt.figure(figsize=(5, 3.5))\n",
+    "\n",
+    "sns.heatmap(df_plot, cmap=\"flare\", annot=True, fmt=\".1f\", cbar=False, vmin=1.5, vmax = 9)\n",
     "# Rotate the tick labels for the x-axis\n",
     "plt.xticks(rotation=65)\n",
-    "fig.suptitle(\"Rankings of Embedders on Molecule Regression Datasets\")\n",
+    "\n",
+    "# Separate the last row (average) from the others\n",
+    "plt.axhline(y=df_plot.shape[0] - 1, color=\"w\", linewidth=1)\n",
+    "plt.xlabel(\"\")\n",
+    "\n",
+    "\n",
     "\n",
     "plt.savefig(\"/home/philippe/Distill/latex/Distillation-MI-ICLR/figures/molecules/reg_rankings.png\", bbox_inches=\"tight\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "melted_ranked = ranked_df.melt(id_vars=\"embedder\", var_name=\"dataset\", value_name=\"meanrank\")\n",
-    "order_datas =ranked_df.set_index(\"embedder\").transpose()[\"student\"].sort_values().index\n",
-    "\n",
-    "\n",
-    "#define colors for models so that student has more saturation\n",
-    "colors = sns.color_palette(\"husl\", len(MODELS_TO_EVAL), desat=0.4)\n",
-    "colors[-1] = sns.color_palette(\"husl\", len(MODELS_TO_EVAL))[-1]\n",
-    "\n",
-    "cmapping = {model.replace(\n",
-    "    STUDENT_MODEL, \"student\"\n",
-    "): color for model, color in zip(MODELS_TO_EVAL, colors)}\n",
-    "\n",
-    "fig,ax = plt.subplots(figsize=(20,3))\n",
-    "\n",
-    "sns.barplot(data=melted_ranked, x=\"dataset\", y=\"meanrank\", hue=\"embedder\", ax=ax, order=order_datas, palette=cmapping)\n",
-    "sns.despine()\n",
-    "#rotate x labels\n",
-    "plt.xticks(rotation=45)\n",
-    "#Move legend outside\n",
-    "plt.legend(loc='upper left', bbox_to_anchor=(1, 1), ncol=1)"
    ],
    "metadata": {
     "collapsed": false
