--- a/molDistill/notebooks/downs_results-all.ipynb
+++ b/molDistill/notebooks/downs_results-all.ipynb
@@ -41,7 +41,6 @@
     "    \"MolR_gat\",\n",
     "    \"ThreeDInfomax\",\n",
     "    STUDENT_MODEL,\n",
-    "    ZINC_MODEL\n",
     "]\n",
     "DATASETS = df_metadata.index.tolist()\n",
     "DATASETS.remove(\"ToxCast\")"
@@ -63,7 +62,7 @@
    "source": [
     "\n",
     "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
+    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS, renames=[\n",
     "    (STUDENT_MODEL,\"student-large\"),\n",
     "    (ZINC_MODEL, \"student-small\"),\n",
     "    ],\n",
@@ -73,7 +72,7 @@
     "df = df.drop([(\" \",\"avg\"), (\" \",\"avg std\")], axis=1)\n",
     "style,latex = style_df_ci(df, order)\n",
     "\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_main.tex\"\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_raw.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
@@ -97,7 +96,7 @@
    "source": [
     "\n",
     "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
+    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS, renames=[\n",
     "    (STUDENT_MODEL,\"student-large\"),\n",
     "    (ZINC_MODEL, \"student-small\"),\n",
     "    ],\n",
@@ -106,8 +105,8 @@
     "\n",
     "step = df_base.embedder.value_counts().max()\n",
     "df_base[\"id\"] = df_base.index%step\n",
-    "\n",
-    "df_base"
+    "df_ranked = get_ranked_df(df_base)\n",
+    "df_ranked"
    ],
    "metadata": {
     "collapsed": false
@@ -118,7 +117,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df_ranked = get_ranked_df(df_base)\n",
+    "\n",
     "\n",
     "\n",
     "style, latex = style_df_ranked(df_ranked, order)\n",
@@ -150,7 +149,7 @@
     "latex = add_hline(latex, 1)\n",
     "latex = add_hline(latex, -2)\n",
     "\n",
-    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_all_rank.tex\"\n",
+    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_ranks.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
@@ -163,6 +162,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Heatmap"
+   ],
    "metadata": {
     "collapsed": false
    }
