--- a/molDistill/notebooks/downs_results-bsl.ipynb
+++ b/molDistill/notebooks/downs_results-bsl.ipynb
@@ -8,16 +8,14 @@
     "%cd ../.."
    ],
    "metadata": {
-    "collapsed": false,
-    "is_executing": true
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "is_executing": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -30,7 +28,7 @@
     "\n",
     "from molDistill.utils.notebooks import *\n",
     "\n",
-    "MODELS_TO_EVAL = [STUDENT_MODEL, L2_model]\n"
+    "MODELS_TO_EVAL = [STUDENT_MODEL, L2_MODEL]\n"
    ]
   },
   {
@@ -51,14 +49,14 @@
     "\n",
     "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
     "    (STUDENT_MODEL,\"student\"),\n",
-    "    (L2_model, \"L2\"),\n",
+    "    (L2_MODEL, \"L2\"),\n",
     "],)\n",
     "\n",
     "\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
     "style,latex = style_df_ci(df, order)\n",
     "\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_compar_cls.tex\"\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/bsl_cls.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
@@ -78,6 +76,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Mean Performances Reg\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -86,14 +93,14 @@
     "\n",
     "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
     "    (STUDENT_MODEL,\"student\"),\n",
-    "    (L2_model, \"L2\"),\n",
+    "    (L2_MODEL, \"L2\"),\n",
     "],)\n",
     "\n",
     "\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
     "style,latex = style_df_ci(df, order)\n",
     "\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_compar_reg.tex\"\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/bsl_reg.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
@@ -102,74 +109,39 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Ranked results\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "DATASETS = df_metadata.index.tolist()\n",
-    "\n",
     "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
     "    (STUDENT_MODEL,\"student\"),\n",
-    "    (L2_model, \"L2\"),\n",
-    "],)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_base = df_base.join(df_metadata, on=\"dataset\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df = df_base.groupby([\"embedder\",\"task_type\"]).metric_test.mean().reset_index().pivot(\"embedder\",\"task_type\",\"metric_test\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df.index.name = None\n",
-    "df.columns.name = None\n",
+    "    (L2_MODEL, \"L2\"),\n",
+    "],)\n",
     "\n",
-    "# REname cols\n",
-    "df.columns = [\"Classification\", \"Regression\"]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "style = df.style"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "\n",
+    "df, order = aggregate_results_with_ci(df_base)\n",
+    "\n",
+    "df_base.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "step = df_base.embedder.value_counts().max()\n",
+    "df_base[\"id\"] = df_base.index%step\n",
+    "\n",
+    "df_ranked = get_ranked_df(df_base)\n",
+    "\n",
+    "\n",
+    "\n",
+    "style, latex = style_df_ranked(df_ranked, order, highlight2=False, highlight3=False)\n",
+    "\n",
+    "\n",
     "style"
    ],
    "metadata": {
@@ -181,26 +153,25 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "col_format = \"l|c|c\"\n",
+    "col_format = \"r|\"\n",
+    "over_cols = None\n",
+    "for col in style.columns:\n",
+    "    if col == \"Avg\":\n",
+    "        col_format += \"|\"\n",
+    "    col_format += \"c\"\n",
     "\n",
     "latex = style.to_latex(\n",
-    "        column_format=col_format,\n",
-    "        siunitx=True,\n",
-    "    )\n",
+    "    column_format=col_format,\n",
+    "    multicol_align=\"|c|\",\n",
+    "    siunitx=True,\n",
+    ")\n",
+    "latex = add_hline(latex, 1)\n",
+    "latex = add_hline(latex, -1)\n",
     "\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_bsl_small.tex\"\n",
+    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/bsl_rank.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
