--- a/molDistill/notebooks/sgl-teach.ipynb
+++ b/molDistill/notebooks/sgl-teach.ipynb
@@ -29,27 +29,20 @@
     "from molDistill.utils.notebooks import *\n",
     "\n",
     "MODELS_TO_EVAL = [\n",
-    "    \"ChemBertMLM-10M\",\n",
-    "    \"ChemBertMTR-77M\",\n",
-    "    \"ChemGPT-1.2B\",\n",
-    "    \"GraphMVP\",\n",
-    "    \"GROVER\",\n",
-    "    \"GraphLog\",\n",
-    "    \"GraphCL\",\n",
-    "    \"InfoGraph\",\n",
-    "    \"FRAD_QM9\",\n",
-    "    \"MolR_gat\",\n",
-    "    \"ThreeDInfomax\",\n",
     "    STUDENT_MODEL,\n",
+    "    SINGLE_TEACHER_BERT,\n",
+    "    SINGLE_TEACHER_TDINFO,\n",
     "]\n",
-    "DATASETS = df_metadata[df_metadata.task_type == \"cls\"].index.tolist()\n",
-    "DATASETS.remove(\"ToxCast\")"
+    "DATASETS = df_metadata.index.tolist()[:-3]\n",
+    "DATASETS.remove(\"ToxCast\")\n",
+    "\n",
+    "len(DATASETS)"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Mean Performances"
+    "# Mean Performances Classif\n"
    ],
    "metadata": {
     "collapsed": false
@@ -60,13 +53,28 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS, renames=[\n",
+    "DATASETS = df_metadata[df_metadata.task_type == \"cls\"].index.tolist()\n",
+    "\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
     "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (ZINC_MODEL, \"student-small\"),\n",
+    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
+    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
     "    ],\n",
     ")\n",
-    "\n",
-    "df, order = aggregate_results_with_ci(df_base)\n"
+    "df, order = aggregate_results_with_ci(df_base)\n",
+    "style,latex = style_df_ci(df, order)\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl_cls.tex\"\n",
+    "with open(table_path, \"w\") as f:\n",
+    "    f.write(latex)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Mean Performances Reg"
    ],
    "metadata": {
     "collapsed": false
@@ -77,10 +85,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df = df.drop([(\" \",\"avg\"), (\" \",\"avg std\")], axis=1)\n",
-    "style,latex = style_df_ci(df, order)\n",
+    "DATASETS = df_metadata[df_metadata.task_type == \"reg\"].index.tolist()\n",
     "\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_cls.tex\"\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
+    "    (STUDENT_MODEL,\"student-large\"),\n",
+    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
+    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
+    "    ],\n",
+    ")\n",
+    "df, order = aggregate_results_with_ci(df_base)\n",
+    "style,latex = style_df_ci(df, order)\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl_reg.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
@@ -104,83 +119,38 @@
    "source": [
     "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
     "    (STUDENT_MODEL,\"student-large\"),\n",
+    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
+    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
     "    ],\n",
     ")\n",
-    "\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
-    "\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
+    "    (STUDENT_MODEL,\"student-large\"),\n",
+    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
+    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
+    "    ],\n",
+    ")\n",
     "df_base.reset_index(inplace=True, drop=True)\n",
-    "#df_base = df_base[df_base.dataset.isin(\n",
-    "#    df_base.groupby(\"dataset\").embedder.nunique().index[df_base.groupby(\"dataset\").embedder.nunique() == len(MODELS_TO_EVAL)])]\n",
     "\n",
     "step = df_base.embedder.value_counts().max()\n",
-    "df_base[\"id\"] = df_base.index%step"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "df_base[\"id\"] = df_base.index%step\n",
     "\n",
-    "df_base"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "ranked_df = get_ranked_df(df_base)\n",
-    "\n",
-    "ranked_df.columns = [\"embedder\"] + [df_metadata.loc[c, \"short_name\"] for c in ranked_df.columns[1:]]\n",
-    "ranked_df"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_plot = ranked_df.set_index(\"embedder\").loc[order[::-1]].transpose()\n",
-    "df_plot.loc[\"Average\"] = df_plot.mean()\n",
-    "\n",
-    "r = 5.5/7.8\n",
-    "SIZE = 7.8\n",
-    "fig = plt.figure(figsize=(5.5, 6.8))\n",
-    "\n",
-    "sns.heatmap(df_plot, cmap=\"flare\", annot=True, fmt=\".1f\", cbar=False, vmin=1.5, vmax = 9, annot_kws={\"color\": \"white\"})\n",
-    "# Rotate the tick labels for the x-axis\n",
-    "plt.xticks(rotation=65)\n",
-    "plt.xlabel(\"\")\n",
-    "\n",
-    "# Separate the last row (average) from the others\n",
-    "plt.axhline(y=df_plot.shape[0] - 1, color=\"w\", linewidth=1)\n",
-    "\n",
-    "plt.savefig(\"/home/philippe/Distill/latex/Distillation-MI-ICLR/figures/molecules/cls_rankings.png\", bbox_inches=\"tight\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
     "df_ranked = get_ranked_df(df_base)\n",
     "\n",
     "\n",
-    "style, latex = style_df_ranked(df_ranked, order)\n",
+    "\n",
+    "style, latex = style_df_ranked(df_ranked, order, highlight2=False, highlight3=False)\n",
     "\n",
     "\n",
     "style\n"
@@ -197,18 +167,19 @@
     "col_format = \"r|\"\n",
     "over_cols = None\n",
     "for col in style.columns:\n",
-    "    col_format += \"|\"\n",
+    "    if col == \"Avg\":\n",
+    "        col_format += \"|\"\n",
     "    col_format += \"c\"\n",
-    "\n",
     "\n",
     "latex = style.to_latex(\n",
     "    column_format=col_format,\n",
     "    multicol_align=\"|c|\",\n",
     "    siunitx=True,\n",
     ")\n",
+    "latex = add_hline(latex, 1)\n",
+    "latex = add_hline(latex, -1)\n",
     "\n",
-    "\n",
-    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/cls_rankings.tex\"\n",
+    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl-teach-rank.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
