--- a/molDistill/notebooks/sgl-teach.ipynb
+++ b/molDistill/notebooks/sgl-teach.ipynb
@@ -32,6 +32,7 @@
     "    STUDENT_MODEL,\n",
     "    SINGLE_TEACHER_BERT,\n",
     "    SINGLE_TEACHER_TDINFO,\n",
+    "    TWO_TEACHER,\n",
     "]\n",
     "DATASETS = df_metadata.index.tolist()[:-3]\n",
     "DATASETS.remove(\"ToxCast\")\n",
@@ -55,17 +56,21 @@
    "source": [
     "DATASETS = df_metadata[df_metadata.task_type == \"cls\"].index.tolist()\n",
     "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
-    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
-    "    ],\n",
-    ")\n",
+    "DATASET_GROUP = [[\"Distribution\", \"HTS\", \"Absorption\", \" \"], [\"Metabolism\"], [\"Tox\",]]\n",
+    "\n",
+    "\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS)\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
-    "style,latex = style_df_ci(df, order)\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl_cls.tex\"\n",
-    "with open(table_path, \"w\") as f:\n",
-    "    f.write(latex)"
+    "\n",
+    "\n",
+    "for i, datasets in enumerate(DATASET_GROUP):\n",
+    "    df_group = df[[col for col in df.columns if (col[0] in datasets)]]\n",
+    "    style,latex = style_df_ci(df_group, order[::-1])\n",
+    "    table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl_cls_{i}.tex\"\n",
+    "    latex = add_hline(latex, 1)\n",
+    "    latex = add_hline(latex, -1)\n",
+    "    with open(table_path, \"w\") as f:\n",
+    "        f.write(latex)"
    ],
    "metadata": {
     "collapsed": false
@@ -87,111 +92,22 @@
    "source": [
     "DATASETS = df_metadata[df_metadata.task_type == \"reg\"].index.tolist()\n",
     "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
-    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
-    "    ],\n",
-    ")\n",
+    "DATASET_GROUP = [[\" \", \"Absorption\", \"Tox\"], [\"Distribution\", \"Excretion\"]]\n",
+    "\n",
+    "\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS)\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
-    "style,latex = style_df_ci(df, order)\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl_reg.tex\"\n",
-    "with open(table_path, \"w\") as f:\n",
-    "    f.write(latex)"
+    "\n",
+    "\n",
+    "for i, datasets in enumerate(DATASET_GROUP):\n",
+    "    df_group = df[[col for col in df.columns if (col[0] in datasets)]]\n",
+    "    style,latex = style_df_ci(df_group, order[::-1])\n",
+    "    table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl_reg_{i}.tex\"\n",
+    "    latex = add_hline(latex, 1)\n",
+    "    latex = add_hline(latex, -1)\n",
+    "    with open(table_path, \"w\") as f:\n",
+    "        f.write(latex)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Rankings"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
-    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
-    "    ],\n",
-    ")\n",
-    "df, order = aggregate_results_with_ci(df_base)\n",
-    "df"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (SINGLE_TEACHER_BERT, \"sgl-bert\"),\n",
-    "    (SINGLE_TEACHER_TDINFO, \"sgl-tdinfomax\"),\n",
-    "    ],\n",
-    ")\n",
-    "df_base.reset_index(inplace=True, drop=True)\n",
-    "\n",
-    "step = df_base.embedder.value_counts().max()\n",
-    "df_base[\"id\"] = df_base.index%step\n",
-    "\n",
-    "df_ranked = get_ranked_df(df_base)\n",
-    "\n",
-    "\n",
-    "\n",
-    "style, latex = style_df_ranked(df_ranked, order, highlight2=False, highlight3=False)\n",
-    "\n",
-    "\n",
-    "style\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "col_format = \"r|\"\n",
-    "over_cols = None\n",
-    "for col in style.columns:\n",
-    "    if col == \"Avg\":\n",
-    "        col_format += \"|\"\n",
-    "    col_format += \"c\"\n",
-    "\n",
-    "latex = style.to_latex(\n",
-    "    column_format=col_format,\n",
-    "    multicol_align=\"|c|\",\n",
-    "    siunitx=True,\n",
-    ")\n",
-    "latex = add_hline(latex, 1)\n",
-    "latex = add_hline(latex, -1)\n",
-    "\n",
-    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/sgl-teach-rank.tex\"\n",
-    "with open(table_path, \"w\") as f:\n",
-    "    f.write(latex)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
