--- a/molDistill/notebooks/downs_results-all.ipynb
+++ b/molDistill/notebooks/downs_results-all.ipynb
@@ -41,7 +41,11 @@
     "    \"MolR_gat\",\n",
     "    \"ThreeDInfomax\",\n",
     "    STUDENT_MODEL,\n",
+    "    ZINC_MODEL,\n",
+    "    L2_MODEL,\n",
+    "    COS_MODEL,\n",
     "]\n",
+    "\n",
     "DATASETS = df_metadata.index.tolist()\n",
     "DATASETS.remove(\"ToxCast\")"
    ]
@@ -60,21 +64,42 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (ZINC_MODEL, \"student-small\"),\n",
-    "    ],\n",
-    ")\n",
+    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS,)\n",
     "\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
-    "df = df.drop([(\" \",\"avg\"), (\" \",\"avg std\")], axis=1)\n",
+    "\n",
+    "\n",
+    "order.remove(\"student-250k\")\n",
+    "order.remove(\"student-2M\")\n",
+    "order.remove(\"L2\")\n",
+    "order.remove(\"Cosine\")\n",
+    "order = order[::-1] + [\"L2\", \"Cosine\", \"student-250k\", \"student-2M\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "style,latex = style_df_ci(df, order)\n",
     "\n",
     "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_raw.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "style"
    ],
    "metadata": {
     "collapsed": false
@@ -94,13 +119,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (ZINC_MODEL, \"student-small\"),\n",
-    "    ],\n",
-    ")\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS)\n",
     "df_base.reset_index(inplace=True, drop=True)\n",
     "\n",
     "step = df_base.embedder.value_counts().max()\n",
@@ -117,13 +136,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "style, latex = style_df_ranked(df_ranked, order)\n",
     "\n",
     "\n",
-    "style\n"
+    "style"
    ],
    "metadata": {
     "collapsed": false
@@ -147,6 +163,8 @@
     "    siunitx=True,\n",
     ")\n",
     "latex = add_hline(latex, 1)\n",
+    "latex = add_hline(latex, -4)\n",
+    "latex = add_hline(latex, -3)\n",
     "latex = add_hline(latex, -2)\n",
     "\n",
     "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_ranks.tex\"\n",
@@ -180,7 +198,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "MODELS_TO_EVAL = [\n",
     "    \"ChemBertMLM-10M\",\n",
     "    \"ChemBertMTR-77M\",\n",
@@ -195,6 +212,7 @@
     "    \"ThreeDInfomax\",\n",
     "    STUDENT_MODEL,\n",
     "]\n",
+    "\n",
     "DATASETS = df_metadata.index.tolist()\n",
     "DATASETS.remove(\"ToxCast\")"
    ],
@@ -207,17 +225,25 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (ZINC_MODEL, \"student-small\"),\n",
-    "    ],\n",
-    ")\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS)\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
     "\n",
     "df_base.reset_index(inplace=True, drop=True)\n",
     "\n",
     "step = df_base.embedder.value_counts().max()\n",
     "df_base[\"id\"] = df_base.index%step"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "order.remove(\"student-2M\")\n",
+    "order = order[::-1] + [\"student-2M\"]"
    ],
    "metadata": {
     "collapsed": false
@@ -242,7 +268,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "from matplotlib.patches import Rectangle\n",
     "plt.rc('text', usetex=True)\n",
     "plt.rc('text.latex', preamble=r'\\usepackage{lmodern}')\n",
@@ -261,16 +286,9 @@
     "df_plot.loc[\"Average (cls)\"] = df_plot.loc[CLS_DATASET].mean()\n",
     "\n",
     "order_dataset = REG_DATASETS + [\"Average (reg)\"] + CLS_DATASET + [\"Average (cls)\"]\n",
-    "df_plot = df_plot.loc[order_dataset].transpose()\n",
+    "df_plot = df_plot.loc[order_dataset]\n",
     "\n",
-    "\n",
-    "fig,ax = plt.subplots(1,1,figsize=(10.5, 3.8))\n",
-    "\n",
-    "\n",
-    "\n",
-    "mask_min = df_plot == df_plot.min(axis = 0)\n",
-    "mask_too_bad = df_plot > 10\n",
-    "\n",
+    "df_plot.columns = [x.replace(\"_\", \" \").split(\"-\")[0].replace(\"student\", \"\\\\textbf{Student-2M}\") for x in df_plot.columns]\n",
     "\n",
     "def highlight_value(data):\n",
     "    if str(np.round(data,1))[-1] != \"0\":\n",
@@ -278,44 +296,100 @@
     "    else:\n",
     "        return r'\\textbf{\\underline{' + str(int(data)) + '}}'\n",
     "\n",
+    "mask_min = (df_plot.transpose() == df_plot.min(axis=1)).transpose()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "bold_values = np.array(\n",
     "    [\n",
     "        highlight_value(data) for data in df_plot.to_numpy().ravel()\n",
     "    ]\n",
     ").reshape(\n",
-    "            np.shape(df_plot)\n",
+    "    np.shape(df_plot)\n",
     ")\n",
     "common_kwargs = {\n",
-    "    \"cmap\": \"flare\",\n",
     "    \"cbar\": False,\n",
-    "    \"vmin\": 1.5,\n",
-    "    \"vmax\": 10,\n",
-    "    \"annot_kws\": {\"color\": \"white\"}\n",
-    "}\n",
-    "\n",
-    "sns.heatmap(df_plot, mask = mask_min | mask_too_bad, annot=True, **common_kwargs)\n",
-    "sns.heatmap(df_plot, mask = ~mask_too_bad, annot=False, **common_kwargs)\n",
-    "sns.heatmap(\n",
-    "    df_plot,\n",
-    "    mask = ~mask_min,\n",
-    "    annot= bold_values,\n",
-    "    fmt='',\n",
-    "    **common_kwargs)\n",
-    "\n",
-    "#sns.heatmap(df_plot, cmap=\"flare\", annot=True, cbar=False, vmin=1.5, vmax = 8, annot_kws={\"color\": \"white\"})\n",
-    "\n",
-    "# Rotate the tick labels for the x-axis\n",
-    "plt.xticks(rotation=45, ha = \"right\")\n",
-    "plt.xlabel(\"\")\n",
-    "plt.ylabel(\"\")\n",
-    "\n",
-    "# Separate the last row (average) from the others\n",
-    "plt.axvline(x=df_plot.shape[1] - 1, color=\"w\", linewidth=1.5)\n",
-    "plt.axvline(x=df_plot.shape[1] - len(CLS_DATASET)-1, color=\"w\", linewidth=1.5)\n",
-    "plt.axvline(x=df_plot.shape[1] - len(CLS_DATASET)-2, color=\"w\", linewidth=1.5)\n",
-    "\n",
-    "plt.savefig(\"/home/philippe/Distill/latex/Distillation-MI-ICLR/figures/molecules/hmp_rankings.png\", bbox_inches=\"tight\")"
+    "    \"vmin\": 1.4,\n",
+    "    \"vmax\": 9,\n",
+    "    \"annot_kws\": {\"color\": \"white\", \"fontsize\": 9},\n",
+    "}"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def create_heatmap(ax, df_plot, mask_min, bold_values, cmap_name = \"viridis_r\", desat = 0.0):\n",
+    "    cmap = sns.color_palette(cmap_name, as_cmap=False)\n",
+    "    cmap_not_min = sns.color_palette(cmap_name, as_cmap=False, desat=desat)\n",
+    "    sns.heatmap(df_plot, mask = mask_min, annot=True, ax = ax,cmap=cmap_not_min, **common_kwargs)\n",
+    "    sns.heatmap(\n",
+    "        df_plot,\n",
+    "        mask = ~mask_min,\n",
+    "        annot= bold_values,\n",
+    "        fmt='',\n",
+    "        ax = ax,\n",
+    "        cmap=cmap,\n",
+    "        **common_kwargs\n",
+    "    )\n",
+    "\n",
+    "    ax.set_xticklabels(ax.get_xticklabels(), rotation=45, ha = \"right\")\n",
+    "    ax.set_yticklabels(ax.get_yticklabels(), rotation=0, ha = \"right\")\n",
+    "    ax.set_xlabel(\"\")\n",
+    "    ax.set_ylabel(\"\")\n",
+    "\n",
+    "    # reduce y ticks\n",
+    "    ax.tick_params(axis='y', labelsize=11)\n",
+    "    ax.tick_params(axis='x', labelsize=11)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "DATASETS_TO_PLOT = [REG_DATASETS, [\"Average (reg)\"], CLS_DATASET, [\"Average (cls)\"]]\n",
+    "\n",
+    "fig,axes = plt.subplots(\n",
+    "    len(DATASETS_TO_PLOT),\n",
+    "    1,\n",
+    "    figsize=(3.5, 8.5),\n",
+    "    sharex=True,\n",
+    "    gridspec_kw={'height_ratios': [len(d) for d in DATASETS_TO_PLOT]}\n",
+    ")\n",
+    "axes = axes.flatten()\n",
+    "plt.subplots_adjust(hspace=0.03)\n",
+    "\n",
+    "for i,dataset_to_plot in enumerate(DATASETS_TO_PLOT):\n",
+    "    filter = [df_plot.index.get_loc(c) for c in dataset_to_plot]\n",
+    "    create_heatmap(axes[i], df_plot.loc[dataset_to_plot], mask_min.loc[dataset_to_plot], bold_values[filter], cmap_name=\"flare\", desat=0.6)\n",
+    "\n",
+    "\n",
+    "plt.savefig(\"/home/philippe/Distill/latex/Distillation-MI-ICLR/figures/molecules/hmp_rankings.pdf\", bbox_inches=\"tight\",)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
