--- a/molDistill/notebooks/downs_results-reg.ipynb
+++ b/molDistill/notebooks/downs_results-reg.ipynb
@@ -40,8 +40,12 @@
     "    \"FRAD_QM9\",\n",
     "    \"MolR_gat\",\n",
     "    \"ThreeDInfomax\",\n",
-    "    STUDENT_MODEL\n",
+    "    STUDENT_MODEL,\n",
+    "    ZINC_MODEL,\n",
+    "    L2_MODEL,\n",
+    "    COS_MODEL,\n",
     "]\n",
+    "\n",
     "DATASETS = df_metadata[df_metadata.task_type == \"reg\"].index.tolist()\n"
    ]
   },
@@ -60,11 +64,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    (ZINC_MODEL, \"student-small\"),\n",
-    "    ],\n",
-    ")\n",
+    "df_base= get_all_results(MODELS_TO_EVAL + [ZINC_MODEL], \"downstream_results\", DATASETS)\n",
     "\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
     "df"
@@ -78,126 +78,50 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df = df.drop([(\" \",\"avg\"), (\" \",\"avg std\")], axis=1)\n",
-    "style,latex = style_df_ci(df, order)\n",
     "\n",
-    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_reg.tex\"\n",
+    "order.remove(\"student-250k\")\n",
+    "order.remove(\"student-2M\")\n",
+    "order.remove(\"L2\")\n",
+    "order.remove(\"Cosine\")\n",
+    "order = order[::-1] + [\"L2\", \"Cosine\", \"student-250k\", \"student-2M\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "LIST_SEP = [\" \", \"Absorption\"]\n",
+    "\n",
+    "style,latex = style_df_ci(\n",
+    "    df[[col for col in df.columns if (col[0] in LIST_SEP)]],\n",
+    "    order,\n",
+    "    rotate=\"-\"\n",
+    ")\n",
+    "latex = add_hline(latex, 1)\n",
+    "latex = add_hline(latex, -4)\n",
+    "latex = add_hline(latex, -3)\n",
+    "latex = add_hline(latex, -2)\n",
+    "\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_reg1.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
-    "    f.write(latex)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Rankings"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[\n",
-    "    (STUDENT_MODEL,\"student-large\"),\n",
-    "    ],\n",
+    "    f.write(latex)\n",
+    "\n",
+    "\n",
+    "style,latex = style_df_ci(\n",
+    "    df[[col for col in df.columns if (col[0] not in LIST_SEP)]],\n",
+    "    order,\n",
+    "    rotate=\"-\"\n",
     ")\n",
+    "latex = add_hline(latex, 1)\n",
+    "latex = add_hline(latex, -4)\n",
+    "latex = add_hline(latex, -3)\n",
+    "latex = add_hline(latex, -2)\n",
     "\n",
-    "df, order = aggregate_results_with_ci(df_base)\n",
-    "df_base.reset_index(inplace=True, drop=True)\n",
-    "\n",
-    "step = df_base.embedder.value_counts().max()\n",
-    "df_base[\"id\"] = df_base.index%step\n",
-    "\n",
-    "df_base"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "ranked_df = get_ranked_df(df_base)\n",
-    "\n",
-    "ranked_df.columns = [\"embedder\"] + [df_metadata.loc[c, \"short_name\"] for c in ranked_df.columns[1:]]\n",
-    "\n",
-    "ranked_df"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_plot = ranked_df.set_index(\"embedder\").loc[order[::-1]].transpose()\n",
-    "df_plot.loc[\"Average\"] = df_plot.mean()\n",
-    "\n",
-    "fig = plt.figure(figsize=(5, 3.5))\n",
-    "\n",
-    "sns.heatmap(df_plot, cmap=\"flare\", annot=True, fmt=\".1f\", cbar=False, vmin=1.5, vmax = 9)\n",
-    "# Rotate the tick labels for the x-axis\n",
-    "plt.xticks(rotation=65)\n",
-    "\n",
-    "# Separate the last row (average) from the others\n",
-    "plt.axhline(y=df_plot.shape[0] - 1, color=\"w\", linewidth=1)\n",
-    "plt.xlabel(\"\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "plt.savefig(\"/home/philippe/Distill/latex/Distillation-MI-ICLR/figures/molecules/reg_rankings.png\", bbox_inches=\"tight\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_ranked = get_ranked_df(df_base)\n",
-    "\n",
-    "\n",
-    "style, latex = style_df_ranked(df_ranked, order)\n",
-    "\n",
-    "\n",
-    "style\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "col_format = \"r|\"\n",
-    "over_cols = None\n",
-    "for col in style.columns:\n",
-    "    col_format += \"|\"\n",
-    "    col_format += \"c\"\n",
-    "\n",
-    "\n",
-    "latex = style.to_latex(\n",
-    "    column_format=col_format,\n",
-    "    multicol_align=\"|c|\",\n",
-    "    siunitx=True,\n",
-    ")\n",
-    "\n",
-    "\n",
-    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/reg_rankings.tex\"\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/all_reg2.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
